[project]
name = "startup-initiative"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "osmnx>=2.1.0",
    "pandas>=3.0.3",
    "rasterio>=1.5.0",
]
